# geoemergeamit

./: .gitignore  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.windsurf/rules/: specify-rules.md
backend/: README.md  __main__.py
backend/src/api/: app.py  errors.py  main.py  middleware.py  schemas.py
backend/src/domain/: errors.py  models.py  types.py  validation.py
backend/src/eda/: data_exploration.py  drivers_precip_water.py  drivers_temperature.py  drivers_vegetation.py  risk_mapping.py  visualization.py
backend/src/infra/: cache.py  config.py  datasets.py  ee_client.py  ee_geometry.py  (+5 more)
docs/: architecture.md  prompt_journal.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
notebooks/: analyze_01_temperature.ipynb  analyze_02_environment.ipynb  analyze_03_landcover.ipynb  analyze_04_riskmapping.ipynb  analyze_05_countylevel.ipynb  explore_01_mosquito_landcover.ipynb  explore_02_globe_data.ipynb  explore_03_globe_hostspots.ipynb  explore_04_vegetation.ipynb  geoemerge-v2.ipynb
resources/: sources.yaml
specs/001-mosquito-risk-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-four-tile-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-input-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: analyze_02_environment.ipynb  analyze_04_riskmapping.ipynb  explore_02_globe_data.ipynb  try01.ipynb
(+33 files in other folders)
